--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "npm run generate && react-scripts build",
