--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
+    "@material-ui/core": "^4.11.3",
     "@mui/material": "^5.14.8",
     "@types/node": "20.5.6",
     "@types/react": "18.2.21",
